Switch to Gradle + externalize settings